--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">채찍채찍당근</string>
-    <string-array name="categorys">
+    <string name="app_name">quizlocker</string>
+
+    <!-- 환경설정 창에서 퀴즈 종류로 사용할 문자열 배열 -->
+    <string-array name="category">
         <item>자바</item>
         <item>C</item>
-        <item>자료구조</item>
+        <item>HTML</item>
     </string-array>
-
 </resources>
